usr/src/cmd/fs.d/nfs/statd/sm_statd.c
@@ -29,7 +29,7 @@
  */
 
 /*	Copyright (c) 1984, 1986, 1987, 1988, 1989 AT&T	*/
-/*	  All Rights Reserved  	*/
+/*	  All Rights Reserved	*/
 
 /*
  * University Copyright- Copyright (c) 1982, 1986, 1988
@@ -91,8 +91,8 @@ static void delete_name(name_entry **namepp, char *name);
 static void remove_name(char *name, int op, int startup);
 static int statd_call_statd(char *name);
 static void pr_name(char *name, int flag);
-static void *thr_statd_init(void);
-static void *sm_try(void);
+static void *thr_statd_init(void *);
+static void *sm_try(void *);
 static void *thr_call_statd(void *);
 static void remove_single_name(char *name, char *dir1, char *dir2);
 static int move_file(char *fromdir, char *file, char *todir);
@@ -238,8 +238,7 @@ statd_init(void)
 	(void) closedir(dp);
 
 	/* Contact hosts' statd */
-	if (thr_create(NULL, 0, (void *(*)(void *))thr_statd_init, NULL,
-	    THR_DETACHED, NULL)) {
+	if (thr_create(NULL, 0, thr_statd_init, NULL, THR_DETACHED, NULL)) {
 		syslog(LOG_ERR,
 		    "statd: unable to create thread for thr_statd_init\n");
 		exit(1);
@@ -250,10 +249,10 @@ statd_init(void)
  * Work thread which contacts hosts' statd.
  */
 static void *
-thr_statd_init(void)
+thr_statd_init(void *arg __unused)
 {
 	struct dirent *dirp;
-	DIR 	*dp;
+	DIR	*dp;
 	int num_threads;
 	int num_join;
 	int i;
@@ -435,11 +434,10 @@ thr_statd_init(void)
 		(void) printf("Creating thread for sm_try\n");
 
 	/* Continue to notify statd on hosts that were unreachable. */
-	if (thr_create(NULL, 0, (void *(*)(void *))sm_try, NULL, THR_DETACHED,
-	    NULL))
+	if (thr_create(NULL, 0, sm_try, NULL, THR_DETACHED, NULL))
 		syslog(LOG_ERR,
 		    "statd: unable to create thread for sm_try().\n");
-	thr_exit((void *) 0);
+	thr_exit(NULL);
 #ifdef lint
 	return (0);
 #endif
@@ -640,7 +638,7 @@ statd_call_statd(char *name)
  * variable will signal it.
  */
 void *
-sm_try(void)
+sm_try(void *arg __unused)
 {
 	name_entry *nl, *next;
 	timestruc_t	wtime;
